--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,9 +21,7 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Pbt=Debug -Pflavor=Sp -Ptarget=Linux64 -Ptool=gcc -x checkstyleMain -x checkstyleTest build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
 
   Java21-Linux64:
     if: contains(toJson(github.event.commits), '[ci skip] ') == false
@@ -40,16 +38,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Linux64 runSmokeTestAll -x checkstyleMain -x checkstyleTest build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-Linux64 -Ptarget=Linux64 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Linux64 -Ptarget=Linux64 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -73,16 +67,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Linux64_fma runSmokeTestAll -x checkstyleMain -x checkstyleTest build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-Linux64_fma -Ptarget=Linux64_fma clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Linux64_fma -Ptarget=Linux64_fma clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -106,16 +96,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Pbt=Debug -Pflavor=Sp -Ptarget=MacOSX64 -x checkstyleMain -x checkstyleTest run runSmokeTestAll build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-MacOSX64 -Ptarget=MacOSX64 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-MacOSX64 -Ptarget=MacOSX64 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -139,16 +125,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Pbt=Debug -Pflavor=Dp -Ptarget=MacOSX_ARM64 -x checkstyleMain -x checkstyleTest runSmokeTestAll build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-MacOSX_ARM64 -Ptarget=MacOSX_ARM64 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-MacOSX_ARM64 -Ptarget=MacOSX_ARM64 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -172,17 +154,13 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Windows64 runSmokeTestAll -x checkstyleMain -x checkstyleTest build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
         shell: bash
       - name: gradlew -Partifact=jolt-jni-Windows64 -Ptarget=Windows64 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Windows64 -Ptarget=Windows64 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
         shell: bash
@@ -208,17 +186,13 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Windows64_avx2 runSmokeTestAll -x checkstyleMain -x checkstyleTest build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
         shell: bash
       - name: gradlew -Partifact=jolt-jni-Windows64_avx2 -Ptarget=Windows64_avx2 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Windows64_avx2 -Ptarget=Windows64_avx2 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
         shell: bash
@@ -248,16 +222,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew --build-file=android.gradle -Pflavor=Sp -Ptarget=Android_ARM8 install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew --build-file=android.gradle -Partifact=jolt-jni-Android -Pflavor=Sp clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew --build-file=android.gradle -Partifact=jolt-jni-Android -Pflavor=Sp clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -284,16 +254,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Linux_ARM32hf install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-Linux_ARM32hf -Ptarget=Linux_ARM32hf clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Linux_ARM32hf -Ptarget=Linux_ARM32hf clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -320,16 +286,12 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Linux_ARM64 assemble \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
       - name: gradlew -Partifact=jolt-jni-Linux_ARM64 -Ptarget=Linux_ARM64 clean release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           ./gradlew -Partifact=jolt-jni-Linux_ARM64 -Ptarget=Linux_ARM64 clean release \
             --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}' \
             -PcentralPassword='${{ secrets.CENTRAL_PASSWORD }}' \
             -PcentralUsername='${{ secrets.CENTRAL_USERNAME }}'
       - name: uploadToCentral.sh
@@ -356,9 +318,7 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Ptarget=Linux_LoongArch64 assemble \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
 
   Java24-Linux:
     if: contains(toJson(github.event.commits), '[ci skip] ') == false
@@ -376,6 +336,4 @@ jobs:
         if: "!startsWith(github.ref, 'refs/tags/')"
         run: |
           ./gradlew -Pbt=Release -Pflavor=Sp -Ptarget=Linux64 build install \
-            --console=plain \
-            -PsigningKeyEncoded='${{ secrets.SIGNING_KEY_ENCODED }}' \
-            -PsigningPassword='${{ secrets.SIGNING_PASSWORD }}'
+            --console=plain
